greenstreet/k8s/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: greenstreet

  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
  - host: greenstreet.local

    http:
      paths:
        - path: /api(/|$)(.*)
          pathType: ImplementationSpecific

          backend:
            service:
              name: backend

              port:
                number: 8000
