greenstreet/k8s/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  namespace: greenstreet

spec:
  ingressClassName: nginx

  rules:
  - host: greenstreet.local

    http:
      paths:

        - path: /
          pathType: Prefix

          backend:
            service:
              name: frontend

              port:
                number: 80
