greenstreet/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: greenstreet-ingress
  namespace: greenstreet

spec:
  ingressClassName: nginx

  rules:
  - host: greenstreet.local
    http:
      paths:

        - path: /api 
          pathType: Prefix

          backend: 
            service:
              name: backend
                
              port:
                number: 8000

        - path: /
          pathType: Prefix

          backend:
            service:
              name: frontend

              port:
                number: 80
